Bussinnes Carg initial proyect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="navbar navbar-container navbar-inverse bg-inverse text-center">
+    <h3 [ngStyle]="{'color': 'white'}">FAHOVA BUSSINESS CARD</h3>
+</div>
+<div class="maincontainer container-fixed">
+    <router-outlet></router-outlet>
+</div>
+<footer class="footer">
+    <app-tab-panel></app-tab-panel>
+</footer>
